--- a/teste/style.css
+++ b/teste/style.css
@@ -65,23 +65,22 @@ body{
 }
 
 .menu-usuario{
-    padding: 30px 300px 30px 300px;
+    padding-top: 30px;
+    padding-bottom: 30px;
     display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    height: 350px;
-    align-items: center;
+    justify-content: space-around;
 }
 
 .titulo-aluno, .titulo-professor{
     font-size: 20px;
     font-weight: bold;
     text-transform: uppercase;
-    color: rgb(220, 226, 231);
+    color: rgb(32, 62, 117);
     margin-bottom: 2em;
 }
 
 .caixa-aluno, .caixa-professor{
+    background-color: rgb(220, 226, 231);
     text-align: center;
     border: solid 2px whitesmoke;
     padding: 10px;
@@ -91,8 +90,8 @@ body{
 }
 
 .caixa-aluno:hover, .caixa-professor:hover{
-    border: solid 3px rgb(197, 171, 21);
-    box-shadow: 3px 2px rgb(197, 171, 21);
+    border: solid 3px rgb(2, 17, 44);
+    box-shadow: 3px 2px rgb(2, 17, 44);
 }
 
 /* AQUI TERMINA O CSS DA MAIN */
@@ -101,4 +100,32 @@ body{
 
 .rodape{
     background-color: rgb(220, 226, 231);  
+}
+
+
+
+/* AQUI COMEÇA A PARTE MOBILE */
+
+@media(max-width: 1024px){
+    .menu{
+        flex-direction: column;
+    }
+
+    .cabecalho-principal, .container{
+        flex-direction: column;
+        align-items: initial;
+        text-align: center;
+    }
+
+    .tipo-usuario-aluno{
+        width: 100%;
+    }
+
+    .menu-usuario{
+        flex-direction: column;
+    }
+
+    .caixa-aluno, .caixa-professor{
+        margin: 20px;
+    }
 }
